welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: not found: value i
  while (i != nums.length){
         ^arrayFront9:6: error: not found: value i
    if (nums(i) == 9){
             ^arrayFront9:12: error: type mismatch;
 found   : Int
 required: Boolean
  return count
         ^